@@ -1,4 +1,10 @@
+2010-10-24 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Sources/DOMCSS.m
+	Fixed some c99-isms
+
 2010-10-23  Nikolaus Schaller <hns@computer.org>
+
 	* fixed issue with <noframes> (which was counted as <frame> when determining the number of rows/columns of a <frameset>)
 	* fixed problem with processing CSS values as strings
 	* made a workaround for a problem in @import() CSS rules (needs to be fixed differently)
